fix bug with container width casuing overflow for nav

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4,12 +4,8 @@ body {
   overflow-x: hidden;
 }
 
-.container {
-  max-width: 100% !important;
-  overflow-x: hidden !important;
-}
 
-.container-fluid {
+.sponsorship .container-fluid {
   max-width: 100% !important;
   overflow-x: hidden !important;
 }
